--- a/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj
+++ b/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="KMS_MFC_projectDlg.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="StringHelper.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -199,6 +200,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StringHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="KMSMFCproject.rc" />
