--- a/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj
+++ b/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj
@@ -184,6 +184,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CDlgImage.h" />
     <ClInclude Include="DebugHelper.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="KMS_MFC_project.h" />
@@ -194,6 +195,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CDlgImage.cpp" />
     <ClCompile Include="DebugHelper.cpp" />
     <ClCompile Include="KMS_MFC_project.cpp" />
     <ClCompile Include="KMS_MFC_projectDlg.cpp" />
