--- a/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj.filters
+++ b/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="DebugHelper.h">
       <Filter>AddClass</Filter>
     </ClInclude>
+    <ClInclude Include="CDlgImage.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="KMS_MFC_project.cpp">
@@ -58,6 +61,9 @@
     </ClCompile>
     <ClCompile Include="DebugHelper.cpp">
       <Filter>AddClass</Filter>
+    </ClCompile>
+    <ClCompile Include="CDlgImage.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
