--- a/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj
+++ b/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="KMS_MFC_project.h" />
     <ClInclude Include="KMS_MFC_projectDlg.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RandomHelper.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="StringHelper.h" />
     <ClInclude Include="targetver.h" />
@@ -205,6 +206,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RandomHelper.cpp" />
     <ClCompile Include="StringHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
