--- a/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj
+++ b/KMS_MFC_project/KMS_MFC_project/KMS_MFC_project.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="KMS_MFC_project.h" />
     <ClInclude Include="KMS_MFC_projectDlg.h" />
+    <ClInclude Include="PathHelper.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RandomHelper.h" />
     <ClInclude Include="Resource.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="DebugHelper.cpp" />
     <ClCompile Include="KMS_MFC_project.cpp" />
     <ClCompile Include="KMS_MFC_projectDlg.cpp" />
+    <ClCompile Include="PathHelper.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
